TSK-1479: fixed classification tree not displaying all items (#1373)
* TSK-1479: fixed classification tree not displaying all items

also change headline in classification details to have a max length to not bump the buttons to overflow when headline's length is too long

* TSK-1479: improve UI as requested in #1373

* TSK-1479: fixed jest tests

--- a/web/src/app/administration/components/classification-details/classification-details.component.scss
+++ b/web/src/app/administration/components/classification-details/classification-details.component.scss
@@ -22,6 +22,9 @@
   &__headline {
     font-size: 1.5rem;
     padding: 0.5rem;
+    max-width: calc(100% - 350px);
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__badge-message {
@@ -62,8 +65,10 @@
 
   &__subheading {
     font-weight: bold;
+    line-height: 1.5;
     padding-left: 15px;
     margin-bottom: 0;
+    margin-top: 24px;
   }
 
   &__horizontal-line {
@@ -82,7 +87,7 @@
   &__general-right-column {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    flex-grow: 1;
   }
 
   &__spacer {
@@ -94,7 +99,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 70%;
+    width: 50%;
   }
 
   &__domain-checkbox {
